--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "bootstrap": "4.0.0-beta.3",
-    "jquery": "^1.9.1 || ^2.0 || ^3.0",
+    "jquery": "^3.0",
     "popper.js": "1.13.0",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
