--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "gulpfile.js",
   "dependencies": {
     "browser-sync": "^2.18.7",
+    "datatable.js": "^0.3.6",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0"
   },
